--- a/Kepillik/Forms/LoginForm.resx
+++ b/Kepillik/Forms/LoginForm.resx
@@ -117,4 +117,48 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="closedEyeImage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAhCAYAAAC4JqlRAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAAitJREFUWEftlE9IFFEcx3fbTZJukdStEClYiBk7lR4s2EMKHsWDoBcvEogHCZMO
+        IuusHgyxSycPXrSD7qqspAh1dC8aHkQo/yB4MMNLUILt1uf3/M2U7gr9MfDwPvBh533fm997897MhiwW
+        i8VisZwb3KlkzJ3uj2vzv+FMJKJuyruqzZ8w+RzmsRsvaHymOCmvjAedp/4GRjQ+gqAWv+F3fOlO9Ue1
+        65+h3nV8ih9xHx9p13HoaEd/EWvYgaXa/UfcywyWVE4P1HH/LH5BqbmMFTqkOAyQm2SL5AZxG5MYR3mS
+        osdDHqmkOL+dmMFP6NeQo13Byzr8dBhUhrv4GZfwEP1CsjuyoCwunnAdc+iPletFZ7KvnnMf4VoW0aTT
+        FIcBYZzBHDfVDq2+kXY5PsFN9IufKrsgE+85R19VWOvK9Vf8gCVmsmLQ6WDOSfVlsntb4Xw+b7abLIry
+        TryPz72IVWeeNzBRl5tOZlnoFpPVYBXZLT6xFsYd4BVTVKH9DGWRzRoVQuegGZT26jUykN1G2cJejQxM
+        nsB32jQ46eQNGcuC7mtk4Ku6RC7v1oJGhdDZRsHxh6+HL/L0ZvsEcvkaZPV1GhkoWrAAxshu7aCnkYF6
+        ERb1gPyxRr8PN8mfh5ztTY0MtBO4rM0AJ+31kq/fnRk4mz80ir3CUW0GMFEPO7CizYA7Yz3XePtbh1ff
+        Brv418hRMLlRowAmifEiNmqzgF+P0WI5p4RCPwCrNWK2PU/9PwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="openedEyeImage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAABRtJREFUWEftVQtM1WUUv3jh5m0kWrHpWo9NZNWWyuMCIk8FjRAJWNEUR0XpVrK2
+        dKlbNdsq7ovLvbwuoFMEa42act+X+yCQBqSEQQiEUx6GgoEmEO976XduH3QVWFZrq43f9u3/fb9zvnPO
+        d875vj9nCUv4X+Pk5Xrum+dOe9psNh6j/h3cHBvm+qlFe33UwkBGObBRLXwd/PgXbfVPM8qBEH2Wt49a
+        tI8t/znEjUZPf414EgFU2+12F0ZTAIcwZuJM+ZsY5UCgVloGfkqglXgw6v7xXkO5W6QxewVbOnD0op7v
+        rxa3+2nEHb9MjC5nNAXwBgXgqxZFMIqzv76Mh0AHfTWizj01Ja6M5qBMy3AIj13VxVxGLYwgrbQABgcT
+        K4+vYhQHp+aG6WSFcDb+SvXJ1YymAN6iAOAwhlGc9LqydeDswXqZ0jlbRxrUjyGAPj+VMI1RC2ObMSeV
+        jMaa8vfCwNwJIrVZKcRv0mXGM2ouAAQdyShOqEH+NnFhBvl+5wCw70Pw9iit3JdRC0N2qXI1Gqgf6e48
+        cOHMSkZzYivynyXDAVqpLLWm5InoipzQALVYQVyENutIgrVIkNFUsQb76sDZUH+v2QBO/Fj7CPh+ZKCh
+        b/SOm8PgYqB0I30fkeFQQxad4sHGgZ4VO80FyT4q4a9I9yRk0yS/d0A2ga8N3+EEozK8a3hwJfYvC9Nn
+        vUtyBLHHOSuLIret+mGBRnwFmbgSpJN+6q8W9TAndj+NqAkObrP1XQMZOY9TXoR8itaYXw7RydJxVbtg
+        77va/qv3917gxO4husxSZtgeqJVcCNRJD24z5T2Hbx7xCK4HdX4/wqh4LUArKfHRiIbBj+4wK6N3Vxc/
+        FW6QH4DOdWZjBlfztP5aC5+5WBzbTXlPIlV65qQv2pjz0sDYyHIqzRZj9gbw0+CvxlsKY5GNdpy262VT
+        oSCx8pgXMtAKrlvRWuUOfV56/Zer0HwS6DsyBl1Vak3p47iSc809B2xwhfIzUOxmzs+mnDu1jhwzFQ64
+        d0iWVFGQhKt6g+aUYpIdtH6+Nk6fm0ZcnFkZ5dgAwBlf3mRZE6LJLEYAM3gffkImI+hdYCq/o7ij7lHU
+        up8MoGk+aRy4Nq9ekBlgZHprRc4u0qOBOtcGq6WbgzQSa6KlKIq4rcactHubbWhijB+lVxwlOYIYEDab
+        5m6YA4qWSnc0SzUpBGgkmkMN5ZRGF2dDkNUhANsWQ3Y86TkP3JDJZOvxGJpH6uUpzvtonlx1YiPeCyPJ
+        EbTp6xsdDzDxHyjrbPREdK2khG9PatUpf+c/HZw7rudmvewwat1M89kRrpWVRhoUH0PHvq/ms/WzwUt+
+        sLigd14Af4v00F/nccsW/0dA6aEQvQwdLBzAfAx9kRddketFMjTQWgTWj/rfftFaFBeuyxILNBIzSiZK
+        sBQmIqghnM6y01roOH2sRbkd63rYsTHnlyKNCm+S/SlerSndgA2V2GjHGMf8q1izMinZcmxHsC6zD/0y
+        glKpiMdwOEFw1w9/e3Z9jCl/NxzrwNGjRQ3dDZ1U9M78tC8GSh9SxcXpI3CH1ciI43HBwDUU3mHzu4a/
+        StQrUIlG2HoK+7R4kpOfN+fznXviLwEbl01MT7l9UHvGAylPDdPKcqj+KMPPvirhuE95xjh9se7DSek3
+        /D3KloE+8Z7Gff/bjhcCGcPg3hwbci1o/8YVDw0PpeLhv88z9ba5ZbZY+c23ennQmf/QLGEJS/hvgsP5
+        Dcl6V9FET519AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
