Moved the project from .net framework to .net core

--- a/Kepillik/Forms/LoginForm.resx
+++ b/Kepillik/Forms/LoginForm.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -118,22 +58,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="closedEyeImage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAhCAYAAAC4JqlRAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAAitJREFUWEftlE9IFFEcx3fbTZJukdStEClYiBk7lR4s2EMKHsWDoBcvEogHCZMO
-        IuusHgyxSycPXrSD7qqspAh1dC8aHkQo/yB4MMNLUILt1uf3/M2U7gr9MfDwPvBh533fm997897MhiwW
-        i8VisZwb3KlkzJ3uj2vzv+FMJKJuyruqzZ8w+RzmsRsvaHymOCmvjAedp/4GRjQ+gqAWv+F3fOlO9Ue1
-        65+h3nV8ih9xHx9p13HoaEd/EWvYgaXa/UfcywyWVE4P1HH/LH5BqbmMFTqkOAyQm2SL5AZxG5MYR3mS
-        osdDHqmkOL+dmMFP6NeQo13Byzr8dBhUhrv4GZfwEP1CsjuyoCwunnAdc+iPletFZ7KvnnMf4VoW0aTT
-        FIcBYZzBHDfVDq2+kXY5PsFN9IufKrsgE+85R19VWOvK9Vf8gCVmsmLQ6WDOSfVlsntb4Xw+b7abLIry
-        TryPz72IVWeeNzBRl5tOZlnoFpPVYBXZLT6xFsYd4BVTVKH9DGWRzRoVQuegGZT26jUykN1G2cJejQxM
-        nsB32jQ46eQNGcuC7mtk4Ku6RC7v1oJGhdDZRsHxh6+HL/L0ZvsEcvkaZPV1GhkoWrAAxshu7aCnkYF6
-        ERb1gPyxRr8PN8mfh5ztTY0MtBO4rM0AJ+31kq/fnRk4mz80ir3CUW0GMFEPO7CizYA7Yz3XePtbh1ff
-        Brv418hRMLlRowAmifEiNmqzgF+P0WI5p4RCPwCrNWK2PU/9PwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="openedEyeImage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="openedEyeImage.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAABRtJREFUWEftVQtM1WUUv3jh5m0kWrHpWo9NZNWWyuMCIk8FjRAJWNEUR0XpVrK2
