Made the sign up form almost fully functional

--- a/Kepillik/Forms/signUpForm.resx
+++ b/Kepillik/Forms/signUpForm.resx
@@ -132,7 +132,7 @@
         Dcl6V9FET519AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="openedEyeImageCopy.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAABRtJREFUWEftVQtM1WUUv3jh5m0kWrHpWo9NZNWWyuMCIk8FjRAJWNEUR0XpVrK2
